編集しました。

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
                     <dt>2022/01/11</dt>
                     <dd>2022/01/11 1月12日（水）より「はいさいゲート」映像リニューアル　「ウミガメver.」を公開</dd>
                 </dl>
+                <div class="kawauso"></div>
                 <div class="sakana_mure"></div>
             </div>
         </div>
