りなさんのHTMLコピペ貼り付けました。

--- a/index.html
+++ b/index.html
@@ -112,33 +112,25 @@
     <section class="one">
         <h1 id="pickup">Pick up</h1>
         <div class="zoo">
-
             <div class="imgBox">
                 <img src="./1586505836_コツメカワウソ01.jpeg" alt="">
             </div>
-
-
             <div class="imgBox">
-                <img src="./1587710020_タカサゴ.jpeg" alt="">
+                <img src="./1587710020_タカサゴ.jpeg" alt="">
             </div>
-
         </div>
-
         <div class="text">
             <ul>
                 <p>沖縄県の代表的な大衆魚で県魚に指定されている。</p>
                 <p>沿岸のサンゴ礁域や岩礁域を群れで遊泳し、</p>
                 <p>エサとなる動物プランクトンを捕食する。</p>
             </ul>
-
             <ul>
                 <p>小川やマングローブなどの水辺に数頭の群れで生息している。</p>
                 <p>水中では長い尾を使って素早く泳ぎ、小魚や甲殻類を捕食する。</p>
                 <p>カワウソの中でもっとも体が小さく、名前の由来は手足の爪が小さいことから。</p>
             </ul>
         </div>
-
-
     </section>
     <section>
         <div class="price">
@@ -150,19 +142,15 @@
             <span>小人</span>
             <span>1,500円</span>
         </div>
-    
     </section>
-
-
     <section>
         <div class="access">
             <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3581.2417642519094!2d127.64860721502899!3d26.15625468345916!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34e569b4739496c7%3A0x6e6b68acb452b177!2zRE1N44GL44KK44KG44GX5rC05peP6aSo!5e0!3m2!1sja!2sjp!4v1645085456098!5m2!1sja!2sjp"
+                src="
+https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3581.2417642519094!2d127.64860721502899!3d26.15625468345916!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x34e569b4739496c7%3A0x6e6b68acb452b177!2zRE1N44GL44KK44KG44GX5rC05peP6aSo!5e0!3m2!1sja!2sjp!4v1645085456098!5m2!1sja!2sjp"
                 width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-
             <div class="address">
                 <h1>Access</h1>
-
                 <ul>
                     <p>｢那覇空港｣から車で約20分、沖縄県豊見城市の水族館</p>
                     <p>〒901-0225 沖縄県豊見城市豊崎3-35</p>
@@ -178,5 +166,4 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="./script.js"></script>
 </body>
-
 </html>
