編集しました。

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
     <!-- miku 編集 -->
     <div id="splash">
         <div id="splash_logo">
+            <!-- <h1 class="logo">めんそーれ</h1> -->
+            <img src="./asset/okinawa_logo.png" alt="mennso">
             <img src="./asset/dmrtLG8s3cM70OXOodaDGQAAAA.jpg" alt="kawauso">
         </div>
     </div>
