--- a/index.html
+++ b/index.html
@@ -114,33 +114,33 @@
         <div class="zoo">
             <div class="imgBox">
                 <img src="./1586505836_コツメカワウソ01.jpeg" alt="">
+                <ul class="text">
+                    <p>小川やマングローブなどの水辺に数頭の群れで生息している。</p>
+                    <p>水中では長い尾を使って素早く泳ぎ、小魚や甲殻類を捕食する。</p>
+                    <p>カワウソの中でもっとも体が小さく、名前の由来は手足の爪が小さいことから。</p>
+                </ul>
             </div>
             <div class="imgBox">
-                <img src="./1587710020_タカサゴ.jpeg" alt="">
+                <img src="./1587710020_タカサゴ.jpeg" alt="" id="takasago">
+                <ul class="text">
+                    <p>沖縄県の代表的な大衆魚で県魚に指定されている。</p>
+                    <p>沿岸のサンゴ礁域や岩礁域を群れで遊泳し、</p>
+                    <p>エサとなる動物プランクトンを捕食する。</p>
+                </ul>
             </div>
-        </div>
-        <div class="text">
-            <ul>
-                <p>沖縄県の代表的な大衆魚で県魚に指定されている。</p>
-                <p>沿岸のサンゴ礁域や岩礁域を群れで遊泳し、</p>
-                <p>エサとなる動物プランクトンを捕食する。</p>
-            </ul>
-            <ul>
-                <p>小川やマングローブなどの水辺に数頭の群れで生息している。</p>
-                <p>水中では長い尾を使って素早く泳ぎ、小魚や甲殻類を捕食する。</p>
-                <p>カワウソの中でもっとも体が小さく、名前の由来は手足の爪が小さいことから。</p>
-            </ul>
         </div>
     </section>
     <section>
         <div class="price">
-            <h1>Price</h1>
+            <h1 id="price1">Price</h1>
+            <div class="spans">
             <span>大人</span>
             <span>2,400円</span>
             <span>中人</span>
             <span>2,000円</span>
             <span>小人</span>
             <span>1,500円</span>
+        </div>
         </div>
     </section>
     <section>
